tmp/wrong_1640056238.9298592.txt
identifier 'NEON_TYPE4'	 [StartOfLine]	Loc=<./tmp/code_0.c:1:1>
l_paren '('		Loc=<./tmp/code_0.c:1:11>
identifier 's8'		Loc=<./tmp/code_0.c:1:12>
comma ','		Loc=<./tmp/code_0.c:1:14>
identifier 'int8_t'	 [LeadingSpace]	Loc=<./tmp/code_0.c:1:16>
r_paren ')'		Loc=<./tmp/code_0.c:1:22>
identifier 'NEON_TYPE4'	 [StartOfLine]	Loc=<./tmp/code_0.c:2:1>
l_paren '('		Loc=<./tmp/code_0.c:2:11>
identifier 'u8'		Loc=<./tmp/code_0.c:2:12>
comma ','		Loc=<./tmp/code_0.c:2:14>
identifier 'uint8_t'	 [LeadingSpace]	Loc=<./tmp/code_0.c:2:16>
r_paren ')'		Loc=<./tmp/code_0.c:2:23>
identifier 'NEON_TYPE2'	 [StartOfLine]	Loc=<./tmp/code_0.c:3:1>
l_paren '('		Loc=<./tmp/code_0.c:3:11>
identifier 's16'		Loc=<./tmp/code_0.c:3:12>
comma ','		Loc=<./tmp/code_0.c:3:15>
identifier 'int16_t'	 [LeadingSpace]	Loc=<./tmp/code_0.c:3:17>
r_paren ')'		Loc=<./tmp/code_0.c:3:24>
identifier 'NEON_TYPE2'	 [StartOfLine]	Loc=<./tmp/code_0.c:4:1>
l_paren '('		Loc=<./tmp/code_0.c:4:11>
identifier 'u16'		Loc=<./tmp/code_0.c:4:12>
comma ','		Loc=<./tmp/code_0.c:4:15>
identifier 'uint16_t'	 [LeadingSpace]	Loc=<./tmp/code_0.c:4:17>
r_paren ')'		Loc=<./tmp/code_0.c:4:25>
identifier 'NEON_TYPE1'	 [StartOfLine]	Loc=<./tmp/code_0.c:5:1>
l_paren '('		Loc=<./tmp/code_0.c:5:11>
identifier 's32'		Loc=<./tmp/code_0.c:5:12>
comma ','		Loc=<./tmp/code_0.c:5:15>
identifier 'int32_t'	 [LeadingSpace]	Loc=<./tmp/code_0.c:5:17>
r_paren ')'		Loc=<./tmp/code_0.c:5:24>
identifier 'NEON_TYPE1'	 [StartOfLine]	Loc=<./tmp/code_0.c:6:1>
l_paren '('		Loc=<./tmp/code_0.c:6:11>
identifier 'u32'		Loc=<./tmp/code_0.c:6:12>
comma ','		Loc=<./tmp/code_0.c:6:15>
identifier 'uint32_t'	 [LeadingSpace]	Loc=<./tmp/code_0.c:6:17>
r_paren ')'		Loc=<./tmp/code_0.c:6:25>
./tmp/code_0.c:49:2: error: '#' is not followed by a macro parameter
#define NEON_VOP(name, vtype, n) \
 ^
./tmp/code_0.c:88:2: error: '#' is not followed by a macro parameter
#define NEON_USAT(dest, src1, src2, type) do { \
 ^
identifier 'uint32_t'	 [StartOfLine] [UnClean='\
uint32_t']	Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:52:38>>
identifier 'HELPER'	 [LeadingSpace]	Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:10>>
l_paren '('		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:16>>
identifier 'glue'		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:17>>
l_paren '('		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:21>>
identifier 'neon_'		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:22>>
comma ','		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:27>>
identifier 'qadd_u8'		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:97:14>>
r_paren ')'		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:32>>
r_paren ')'		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:33>>
l_paren '('		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:34>>
identifier 'CPUState'		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:35>>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:44>>
identifier 'env'		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:45>>
comma ','		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:48>>
identifier 'uint32_t'	 [LeadingSpace]	Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:50>>
identifier 'arg1'	 [LeadingSpace]	Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:59>>
comma ','		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:63>>
identifier 'uint32_t'	 [LeadingSpace]	Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:65>>
identifier 'arg2'	 [LeadingSpace]	Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:74>>
r_paren ')'		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:78>>
identifier 'NEON_VOP_BODY'	 [LeadingSpace] [UnClean='\
NEON_VOP_BODY']	Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:53:80>>
l_paren '('		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:54:14>>
identifier 'neon_u8'		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:97:23>>
comma ','		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:54:20>>
numeric_constant '4'	 [LeadingSpace]	Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:97:32>>
r_paren ')'		Loc=<./tmp/code_0.c:97:1 <Spelling=./tmp/code_0.c:54:23>>
identifier 'uint32_t'	 [StartOfLine] [UnClean='\
uint32_t']	Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:52:38>>
identifier 'HELPER'	 [LeadingSpace]	Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:10>>
l_paren '('		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:16>>
identifier 'glue'		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:17>>
l_paren '('		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:21>>
identifier 'neon_'		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:22>>
comma ','		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:27>>
identifier 'qadd_u16'		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:100:14>>
r_paren ')'		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:32>>
r_paren ')'		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:33>>
l_paren '('		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:34>>
identifier 'CPUState'		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:35>>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:44>>
identifier 'env'		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:45>>
comma ','		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:48>>
identifier 'uint32_t'	 [LeadingSpace]	Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:50>>
identifier 'arg1'	 [LeadingSpace]	Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:59>>
comma ','		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:63>>
identifier 'uint32_t'	 [LeadingSpace]	Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:65>>
identifier 'arg2'	 [LeadingSpace]	Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:74>>
r_paren ')'		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:78>>
identifier 'NEON_VOP_BODY'	 [LeadingSpace] [UnClean='\
NEON_VOP_BODY']	Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:53:80>>
l_paren '('		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:54:14>>
identifier 'neon_u16'		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:100:24>>
comma ','		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:54:20>>
numeric_constant '2'	 [LeadingSpace]	Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:100:34>>
r_paren ')'		Loc=<./tmp/code_0.c:100:1 <Spelling=./tmp/code_0.c:54:23>>
eof ''		Loc=<./tmp/code_0.c:102:17>
2 errors generated.
